2005-07-23  Dennis Cranston <dennis_cranston@yahoo.com>

	* gsearchtool-support.c: (get_file_pixbuf):  Add a workaround
	for bugzilla report #311318, "gtk_icon_theme_load_icon () can 
	return pixbufs larger than requested size".
	 
2005-07-22  Dennis Cranston <dennis_cranston@yahoo.com>

	* gsearchtool-support.c: (gsearchtool_icon_lookup,
	get_file_pixbuf)  If gdk_pixbuf_new_from_file_at_scale() fails, 
	revert to the stock icon.
	
2005-07-18  Dennis Cranston <dennis_cranston@yahoo.com>

	* gsearchtool.c: new function,
	  gsearchtool_setup_gconf_notifications().
	* gsearchtool-support.[ch]: new functions,
	  gsearchtool_gconf_add_dir() and gsearchtool_gconf_watch_key().
	* gsearchtool-callbacks.[ch]: new function, 
	  single_click_to_activate_key_changed_cb().
	
	  Respond to "single click to activate" key change on the fly.
	
2005-07-17  Dennis Cranston <dennis_cranston@yahoo.com>

	* help/C/figures/gnome-search-tool_window.png:  Update.
	
2005-07-16  Dennis Cranston <dennis_cranston@yahoo.com>

	* gsearchtool-callbacks.c:  if the gtk+ version is at least
	2.7.3 then use its new builtin overwrite confirmation dialog.
	
2005-07-13  Dennis Cranston <dennis_cranston@yahoo.com>
	
	* gsearchtool.c  (spawn_search_command): remove pango underlines.
	(create_search_results_section): connect to the motion and leave 
	notify events (filename_cell_data_func): new function.
	
	* gsearchtool-callbacks.[ch]  (file_motion_notify_cb,
	file_leave_notify_cb):  New functions.
	
	* gsearchtool.h: Add search_results_hover_path.
	
	Fix single click to activate items to match CVS version of 
	nautilus.
	
2005-07-09  Dennis Cranston <dennis_cranston@yahoo.com>

	* help/C/gnome-search-tool.xml:  Help prevent
	confusion reported in Bug #303900 by adding 
	information about disabling the search options.
	
2005-07-06  Dennis Cranston <dennis_cranston@yahoo.com>

	* gsearchtool.c:  Fix drag and drop to work with the
	current CVS version of nautilus.
	