@@ -1,5 +1,10 @@
 2005-07-23  Dennis Cranston <dennis_cranston@yahoo.com>
 
+	* gsearchtool-support.c: (get_file_pixbuf):  Protect against 
+	thumbnail_pixbuf == NULL warnings.
+	
+2005-07-23  Dennis Cranston <dennis_cranston@yahoo.com>
+
 	* gsearchtool-support.c: (get_file_pixbuf):  Add a workaround
 	for bugzilla report #311318, "gtk_icon_theme_load_icon () can 
 	return pixbufs larger than requested size".
